--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,10 @@ FakesAssemblies/
 
 # Visual Studio 6 workspace options file
 *.opt
+
+#Eclise
+.project
+.settings
+.recommenders
+.classpath
+.metadata
