--- a/java_ojs/settings.json
+++ b/java_ojs/settings.json
@@ -1,1 +1,1 @@
-{"Setting 4":"test","Setting 2":"1234","Setting 3":"true","Setting 1":"false"}
+{"Setting 4":"test","Setting 2":123467893,"Setting 3":"true","Setting 1":"false"}
