Settings.json updated. Updated Settings screen + added basic - advanced buttons

--- a/java_ojs/settings.json
+++ b/java_ojs/settings.json
@@ -1,1 +1,1 @@
-{"Setting 4":"test","Setting 2":123467893,"Setting 3":"true","Setting 1":"false"}
+{"Metadata":"true","Additional Files":"true","Peer review":"true","Optimize PDFs":"false","Optimize Images":"false","Validate XML (JATS)":"false","Insert DOIs in PDFs":"true"}
