Settings saved properly

--- a/java_ojs/settings.json
+++ b/java_ojs/settings.json
@@ -1,1 +1,1 @@
-{"Metadata":"true","Additional Files":"true","Peer review":"true","Optimize PDFs":"false","Optimize Images":"false","Validate XML (JATS)":"false","Insert DOIs in PDFs":"true"}
+{"Insert DOIs in PDFs":"true","Optimize PDFs":"true","Metadata":"false","Optimize Images":"true","Validate XML (JATS)":"true","Additional Files":"false","Peer review":"false"}
