--- a/java_ojs/settings.json
+++ b/java_ojs/settings.json
@@ -1,1 +1,1 @@
-{"Insert DOIs in PDFs":"true","Optimize PDFs":"true","Metadata":"false","Optimize Images":"true","Validate XML (JATS)":"true","Additional Files":"false","Peer review":"false"}
+{"Insert DOIs in PDFs":"true","Optimize PDFs":"true","Metadata":"true","Optimize Images":"true","Validate XML (JATS)":"true","Additional Files":"false","Peer review":"false"}
